Fixed cloud sizing bug on mobile.

--- a/style.css
+++ b/style.css
@@ -291,12 +291,29 @@ body {
 @keyframes animateCloud {
     0% {
         margin-left: -1000px;
+        /* transform: translateX(-1000px); */
     }
     100% {
         margin-left: 100%;
+        /* transform: translateX(1000px); */
     }
 }
 
+
+/* .clouds img {
+    position: absolute;
+} */
+
+
+#background-wrap {
+    bottom: 0;
+	left: 0;
+	/* padding-top: 50px; */
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: -1;
+}
 
 
 .cloud-1{
@@ -305,6 +322,7 @@ body {
 	animation: animateCloud 65s linear infinite;
 
     margin-top: 100px;
+    position: absolute;
 
     -webkit-transform: scale(0.65);
 	-moz-transform: scale(0.65);
@@ -317,6 +335,7 @@ body {
 	animation: animateCloud 40s linear infinite;
 
     margin-top: 300px;
+    position: absolute;
 	
 	-webkit-transform: scale(0.3);
 	-moz-transform: scale(0.3);
@@ -329,6 +348,7 @@ body {
 	animation: animateCloud 60s linear infinite;
 
     margin-top: 675px;
+    position: absolute;
 	
 	-webkit-transform: scale(0.5);
 	-moz-transform: scale(0.5);
@@ -341,6 +361,7 @@ body {
 	animation: animateCloud 48s linear infinite;
 	
     margin-top: 400px;
+    position: absolute;
 
 	-webkit-transform: scale(0.4);
 	-moz-transform: scale(0.4);
@@ -353,6 +374,7 @@ body {
 	animation: animateCloud 25s linear infinite;
 
     margin-top: 525px;
+    position: absolute;
 	
 	-webkit-transform: scale(0.55);
 	-moz-transform: scale(0.55);
